[gd_scene load_steps=4 format=3 uid="uid://ktlxrpr5syea"]

[ext_resource type="Script" path="res://main.gd" id="1_v1c2x"]
[ext_resource type="PackedScene" uid="uid://dq02d7ku86vxp" path="res://game.tscn" id="2_c63ru"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yy1td"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v1c2x")

[node name="Game" parent="." instance=ExtResource("2_c63ru")]

[node name="Menu" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 29.0
offset_right = 629.0
offset_bottom = 278.0

[node name="GridContainer2" type="GridContainer" parent="Menu"]
layout_mode = 2
columns = 2

[node name="GridContainer" type="GridContainer" parent="Menu/GridContainer2"]
layout_mode = 2
columns = 3

[node name="JoinButton" type="MenuButton" parent="Menu/GridContainer2/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Join"

[node name="HostButton" type="MenuButton" parent="Menu/GridContainer2/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Host"

[node name="NameTextBox" type="LineEdit" parent="Menu/GridContainer2/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
placeholder_text = "I am called..."
max_length = 16

[node name="AddressTextBox" type="LineEdit" parent="Menu/GridContainer2/GridContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "I wish to join IP..."
max_length = 15

[node name="ReadyButton" type="CheckButton" parent="Menu/GridContainer2/GridContainer"]
layout_mode = 2
button_pressed = true
text = "Hesitate"

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/GridContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="GridContainer2" type="GridContainer" parent="Menu/GridContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="MenuButton" type="MenuButton" parent="Menu/GridContainer2/GridContainer2"]
layout_mode = 2
text = "I shall"

[node name="ProgressButton" type="MenuButton" parent="Menu/GridContainer2/GridContainer2"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_yy1td")
text = "Progress"

[node name="PlayerCount1" type="MenuButton" parent="Menu/GridContainer2/GridContainer2"]
layout_mode = 2
text = "0"

[node name="MenuButton2" type="MenuButton" parent="Menu/GridContainer2/GridContainer2"]
layout_mode = 2

[node name="FurtherButton" type="MenuButton" parent="Menu/GridContainer2/GridContainer2"]
layout_mode = 2
text = "Further"

[node name="PlayerCount2" type="MenuButton" parent="Menu/GridContainer2/GridContainer2"]
layout_mode = 2
text = "0"

[connection signal="button_up" from="Menu/GridContainer2/GridContainer/JoinButton" to="." method="_on_join_buttonpress"]
[connection signal="button_up" from="Menu/GridContainer2/GridContainer/HostButton" to="." method="_on_host_buttonpress"]
[connection signal="toggled" from="Menu/GridContainer2/GridContainer/ReadyButton" to="." method="_on_ready_button_toggled"]
[connection signal="button_up" from="Menu/GridContainer2/GridContainer2/ProgressButton" to="." method="_on_team_select" binds= [-1]]
[connection signal="button_up" from="Menu/GridContainer2/GridContainer2/FurtherButton" to="." method="_on_team_select" binds= [1]]
